--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
-        android:id="@+id/userImage"
+        android:id="@+id/suwret"
         android:layout_width="40dp"
         android:layout_height="40dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -17,10 +17,10 @@
         android:src="@drawable/user"/>
 
     <TextView
-        android:id="@+id/tvTitle"
+        android:id="@+id/ati"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/userImage"
+        app:layout_constraintStart_toEndOf="@id/suwret"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginStart="@dimen/magin_standart"
         android:layout_marginTop="@dimen/magin_standart"
@@ -29,11 +29,11 @@
         android:textColor="@android:color/background_dark"/>
 
     <TextView
-        android:id="@+id/tvDescription"
+        android:id="@+id/familiyasi"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
-        app:layout_constraintStart_toEndOf="@id/userImage"
-        app:layout_constraintTop_toBottomOf="@id/tvTitle"
+        app:layout_constraintStart_toEndOf="@id/suwret"
+        app:layout_constraintTop_toBottomOf="@id/ati"
         android:layout_marginStart="@dimen/magin_standart"
         android:text="This title text"/>
 
